2015-01-16 Moved zoom library code outside IWB Toolbar module
2015-01-14 Added new property Custom Display to eKeyboard module
2015-01-13 Updated Google Swiffy library to ver. 7.1
2015-01-13 Added show and hide commands to SVG module
2015-01-12 Added ability to choose starting point of presentation in Slideshow module
2015-01-12 Fixed double click effect on mobile devices in IWB Toolbar module
2015-01-09 Fixed Stand and Hide Area functions on mobile devices in IWB Toolbar module
2015-01-08 Fixed notes on mobile devices in IWB Toolbar module
2015-01-08 Added ShowAnswers to Fractions module
2015-01-08 Added ShowAnswers to Clock module
2015-01-07 Adapted tests to current module version in Video module
2015-01-07 Fixed issue with removing class disable on switching to work mode in TrueFalse module
2015-01-07 Adapted tests to current module version in Animated Lesson Progress module
2015-01-02 Adapted tests to current module version in LearnPen Data module
2015-01-02 Adapted tests to current module version in Custom Scoring module
2015-01-02 Adapted tests to current module version in Image Viewer module
2015-01-02 Adapted tests to current module version in Memo Game module
2015-01-02 Adapted tests to current module version in Page Rating module
2015-01-02 Adapted tests to current module version in Paragraph eKeyboard module
2015-01-02 Adapted tests to current module version in Coloring module
2015-01-02 Adapted tests to current module version in Paragraph module
2015-01-02 Adapted tests to current module version in Text Selection module
2015-01-02 Adapted tests to current module version in LearnPen module
2015-01-02 Adapted tests to current module version in MultiAudio module
2014-12-31 Fixed issue with visible state in Drawing module
2014-12-30 Fixed issues with SCORM local resources in navigation bar and External Link Button module when lesson is run with external Player
2014-12-30 Fixed issue with page preview URL pointing to SCORM local resource in navigation bar