@@ -1,3 +1,4 @@
+2015-01-16 Fixed sending multiple events after reset and coloring fields in Coloring module
 2015-01-16 Moved zoom library code outside IWB Toolbar module
 2015-01-14 Added new property Custom Display to eKeyboard module
 2015-01-13 Updated Google Swiffy library to ver. 7.1
